<resources>
    <string name="app_name">Techathon</string>

    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile No</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="change">Change</string>
</resources>